# uchannel

./: .gitignore  ANDROID_CHAT_NATIVE.md  ANDROID_UI_DESIGN.md  ASR_CONFIG.md  BUILD_GUIDE.md  CHAT_HISTORY_FEATURE.md  CLAUDE.md  CLEANUP_NOTES.md  HOME_PAGE_REDESIGN.md  HTTPS_SETUP.md  JAVA17_SETUP.md  README.md  SERVER_MESSAGE_STORAGE.md  UI_BEAUTIFICATION.md  UI_UX_PRO_MAX_OPTIMIZATION.md  open-android-studio.sh
android/: AndroidManifest.xml  FCMTokenManager.kt  PushNotificationService.kt  build.gradle  gradle.properties  gradlew  settings.gradle
backend-java/: .gitignore  QWEN_CONFIG.md  README.md  pom.xml
backend-rust/: .env  Cargo.toml  Cross.toml
backend-rust/data/: uchannel.db
backend-rust/src/: config.rs  error.rs  main.rs
backend-rust/src/dto/: chat.rs  mod.rs  stats.rs  task.rs
backend-rust/src/handlers/: chat.rs  stats.rs  task.rs
backend-rust/src/models/: message.rs  mod.rs  task.rs
backend-rust/src/services/: chat_service.rs  mod.rs  stats_service.rs  task_service.rs
docs/: china-deployment-guide.md  multi-platform-push-architecture.md  push-architecture-comparison.md  push-notification-architecture.md  websocket-push-challenges.md
flutter_app/: README.md  pubspec.yaml
react-native-app/: .gitignore  ANDROID_SETUP.md  ANDROID_STUDIO_DEBUG.md  ANDROID_STUDIO_NODE_FIX.md  MIGRATION_GUIDE.md  QUICK_START.md  REACT_NATIVE_INTRO.md  README.md  app.json  package-lock.json  package.json  tsconfig.json
rn_app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
scripts/: README.md  build-android.sh  build-backend.sh  build.bat  (+5 more)
(+207 files in other folders)
