[package]
name = "uchannel-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (使用 rustls 避免 OpenSSL 依赖)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-rustls"] }

# HTTP client for Qwen API (使用 rustls 避免 OpenSSL 依赖)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"

# UUID for conversation IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Regex for parsing
regex = "1"

# Random number generation
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
